--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
 
-    <pre>
+    <!--<pre>
       <h1>Hello World</h1>
-    </pre>
+    </pre>-->
+    <div id="app"></div> 
 
     <script type="text/javascript" src="bundle.js"></script>
   </body>
