--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="utf-8">
     <title>Rooster Grin Front End Dev Test</title>
     <link rel="shortcut icon" href="assets/favicon.jpg"/>
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <link rel="stylesheet" href="/styles/main.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   </head>
   <body>
 
-    <!--<pre>
-      <h1>Hello World</h1>
-    </pre>-->
     <div id="app"></div> 
 
     <script type="text/javascript" src="bundle.js"></script>
